--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "scripts": {
+        "api": "node api.js",
+        "build": "webpack",
+        "watch": "webpack --watch",
+        "dev": "webpack-dev-server --port 3000",
+        "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,18 @@
   "bugs": {
     "url": "https://github.com/fujiy/CelAnimate/issues"
   },
-  "homepage": "https://github.com/fujiy/CelAnimate#readme"
+  "homepage": "https://github.com/fujiy/CelAnimate#readme",
+  "dependencies": {
+    "three": "^0.121.1"
+  },
+  "devDependencies": {
+    "css-loader": "^4.3.0",
+    "elm-webpack-loader": "^7.0.1",
+    "file-loader": "^6.1.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
