--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "celanimate",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "api": "node api.js",
     "build": "webpack",
@@ -27,6 +27,8 @@
     "css-loader": "^4.3.0",
     "elm-webpack-loader": "^7.0.1",
     "file-loader": "^6.1.0",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
