--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "celanimate",
   "version": "0.1.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/main.js",
   "scripts": {
     "api": "node api.js",
     "build": "webpack",
@@ -25,8 +25,13 @@
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
+    "electron": "^10.1.3",
+    "electron-reload": "^1.5.0",
+    "electron-reloader": "^1.0.1",
     "elm-webpack-loader": "^7.0.1",
     "file-loader": "^6.1.0",
+    "html-loader": "^1.3.1",
+    "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.0",
