--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron-reloader": "^1.0.1",
     "elm-webpack-loader": "^7.0.1",
     "file-loader": "^6.1.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.4",
