--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/fujiy/CelAnimate#readme",
   "dependencies": {
+    "stats-js": "^1.0.1",
     "three": "^0.121.1"
   },
   "devDependencies": {
