--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "three": "^0.121.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
     "css-loader": "^4.3.0",
     "electron": "^10.1.3",
     "electron-reload": "^1.5.0",
@@ -34,6 +35,11 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
+    "postcss": "^8.1.1",
+    "postcss-loader": "^4.0.4",
+    "sass": "^1.27.0",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.0",
