--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "electron": "^10.1.3",
     "electron-reload": "^1.5.0",
     "electron-reloader": "^1.0.1",
+    "elm-hot": "^1.1.5",
     "elm-webpack-loader": "^7.0.1",
     "file-loader": "^6.1.0",
     "hard-source-webpack-plugin": "^0.13.1",
