--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/fujiy/CelAnimate#readme",
   "dependencies": {
+    "material-design-icons": "^3.0.1",
+    "material-design-icons-iconfont": "^6.1.0",
     "stats-js": "^1.0.1",
+    "tailwindcss": "^1.9.2",
     "three": "^0.121.1"
   },
   "devDependencies": {
