--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/fujiy/CelAnimate#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "font-awesome-webpack": "0.0.5-beta.2",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^6.1.0",
     "stats-js": "^1.0.1",
@@ -28,6 +30,14 @@
     "three": "^0.121.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "autoprefixer": "^10.0.1",
     "css-loader": "^4.3.0",
     "electron": "^10.1.3",
@@ -39,6 +49,8 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "postcss": "^8.1.1",
     "postcss-loader": "^4.0.4",
     "sass": "^1.27.0",
