--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^10.0.1",
     "css-loader": "^4.3.0",
     "electron": "^10.1.3",
