--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "material-design-icons-iconfont": "^6.1.0",
     "stats-js": "^1.0.1",
     "tailwindcss": "^1.9.2",
-    "three": "^0.121.1"
+    "three": "^0.121.1",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -41,7 +42,7 @@
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^10.0.1",
     "css-loader": "^4.3.0",
-    "electron": "^10.1.3",
+    "electron": "^10.1.5",
     "electron-reload": "^1.5.0",
     "electron-reloader": "^1.0.1",
     "elm-hot": "^1.1.5",
@@ -57,10 +58,11 @@
     "sass": "^1.27.0",
     "sass-loader": "^9.0.3",
     "style-loader": "^2.0.0",
+    "terser": "^5.3.8",
+    "terser-webpack-plugin": "git://github.com/webpack-contrib/terser-webpack-plugin.git#ee0c5e362f2f0a089caec054d1f0787c3a07dcae",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "url-loader": "^4.1.0",
-    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0"
